welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.error
Diagonal:3: error: not found: value getGetMondeHauteur
	for (diag <- 0 to getGetMondeHauteur()) {
                          ^