welcome.lessons.welcome.traversal.diagonal.TraversalDiagonal.scala.code
var cpt = 0
override def run() {
	for (diag <- 0 to getGetMondeHauteur()) {
		for (pas <- 0 to diag) {
			setPos(pas,diag-pas)
			ecritMessage(cpt);
			cpt=cpt+1;
			
		}
	}
}
